# Linux-Armoury

./: .flake8  .gitignore  .pre-commit-config.yaml  ASUSCTL_INSTALLATION.md  BEAST_MODE.md  CHANGELOG.md  CONTRIBUTING.md  ENHANCED_FEATURES.md  ENHANCEMENTS_INTEGRATION_GUIDE.md  ENHANCEMENT_SUMMARY.md  FAQ.md  FEATURE_ADDITIONS_SUMMARY.md  FLATHUB_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_SUMMARY.md  LICENSE  Makefile  PLUGIN_SYSTEM.md  PROJECT_SUMMARY.md  README.md  TESTING.md  UI_OVERVIEW.md  com.github.th3cavalry.linux-armoury.desktop  com.github.th3cavalry.linux-armoury.yml  config.py  demo.py  demo_enhanced_ui.py  install.py  install.sh  linux-armoury-0.5.0b0.flatpak  linux-armoury-autostart.desktop  linux-armoury-cli.py  linux-armoury-gui.py  linux-armoury.desktop  plugin_system.py  prepare-flathub-submission.sh  pyproject.toml  requirements.txt  run.py  setup.py  (+4 more)
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: flatpak-ci.yml  flatpak-release.yml  lint.yml  publish-to-flathub.yml
data/dbus/: com.github.th3cavalry.LinuxArmoury.conf
data/metainfo/: com.github.th3cavalry.linux-armoury.metainfo.xml
data/polkit/: com.github.th3cavalry.linux-armoury.policy
data/systemd/: linux-armoury.service
data/udev/: 99-linux-armoury.rules
docs/: ARCHITECTURE.md  AUTO_PROFILE_SWITCHING.md  BEAST_MODE.md  CHANGELOG.md  CONTRIBUTING.md  DISPLAY_SETTINGS.md  ENHANCEMENTS_COMPLETED_SUMMARY.md  ENHANCEMENT_RECOMMENDATIONS.md  FAQ.md  FEATURE_ADDITIONS_SUMMARY.md  FEATURE_MAPPING.md  FLATHUB_SUBMISSION.md  GUI_REFACTOR_PROGRESS.md  IMPLEMENTATION_ROADMAP.md  PLUGIN_SYSTEM.md  PROJECT_SUMMARY.md  QUICKSTART.md  RELEASE-0.6.0.md  RELEASE-0.6.1.md  SCREENSHOTS.md  TESTING.md  TRAY_AND_AUTOSTART.md  UI_OVERVIEW.md
examples/plugins/: temperature_alert.py
flatpak-repo/: summary  summary.idx
flatpak-repo/refs/heads/app/com.github.th3cavalry.linux-armoury/x86_64/: master
flatpak-repo/refs/heads/appstream/: x86_64
flatpak-repo/refs/heads/appstream2/: x86_64
linux_armoury/: __init__.py  main.py
linux_armoury/core/: __init__.py  audio_manager.py  config.py  gaming_mode.py  hardware_monitor.py  rgb_control.py  rog_integration.py  update_manager.py  utils.py
linux_armoury/ui/: enhanced_controls.py  main_window.py  tray_icon.py  update_tab.py
src/linux_armoury/: __init__.py  cli.py  config.py  config_manager.py  dbus_client.py  dbus_service.py  enhancements.py  fan_curve_editor.py  gui.py  plugin_system.py  profile_manager.py  system_utils.py  theme.py  tray_icon.py
src/linux_armoury/modules/: asusd_client.py  battery_control.py  fan_control.py  gpu_control.py  hardware_detection.py  keyboard_control.py  overclocking_control.py  session_stats.py  system_monitor.py
src/linux_armoury/widgets/: __init__.py  monitoring_graph.py  toast.py
tests/: test_config.py  test_plugin_system.py  test_system_utils.py
