[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-armoury"
version = "1.2.0"
description = "GTK4/libadwaita control center for ASUS ROG laptops"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "th3cavalry", email = "th3cavalry@github.com"}
]
requires-python = ">=3.8"
keywords = ["asus", "rog", "linux", "gtk4", "libadwaita", "tdp", "power-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: Desktop Environment :: Gnome",
]
dependencies = [
    "PyGObject>=3.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/th3cavalry/Linux-Armoury"
Repository = "https://github.com/th3cavalry/Linux-Armoury.git"
Issues = "https://github.com/th3cavalry/Linux-Armoury/issues"

[project.scripts]
linux-armoury = "linux_armoury.gui:main"
linux-armoury-cli = "linux_armoury.cli:main"

[project.gui-scripts]
linux-armoury-gui = "linux_armoury.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
linux_armoury = ["data/*", "data/icons/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
