[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-armoury"
version = "1.3.0b1"
description = "GTK4/libadwaita control center for ASUS ROG laptops"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "th3cavalry", email = "th3cavalry@github.com"}
]
requires-python = ">=3.8"
keywords = ["asus", "rog", "linux", "gtk4", "libadwaita", "tdp", "power-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: Desktop Environment :: Gnome",
]
dependencies = [
    "PyGObject>=3.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/th3cavalry/Linux-Armoury"
Repository = "https://github.com/th3cavalry/Linux-Armoury.git"
Issues = "https://github.com/th3cavalry/Linux-Armoury/issues"

[project.scripts]
linux-armoury = "linux_armoury.gui:main"
linux-armoury-cli = "linux_armoury.cli:main"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["linux_armoury"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.flake8]
max-line-length = 140
extend-ignore = ["E203", "W503", "E501", "F541", "E722", "E231", "F401", "E402", "E702", "E713", "F841", "E202"]
exclude = [".git,__pycache__,.venv,build,dist,docs"]

[project.gui-scripts]
linux-armoury-gui = "linux_armoury.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
linux_armoury = ["data/*", "data/icons/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.metadata]
# Consolidated formatting options are declared above.
